# Hackathorn-_book_Physical-AI-_or_Humanoid-Robotics-Course-latest

./: .dockerignore  .env.example  .env.local.example  .gitignore  .vercelignore  404.html  ARCHITECTURE.md  CHATBOT_STATUS.md  CI_CD_FILES_INDEX.md  CI_CD_GUIDE.md  DATABASE_SETUP.md  DEPLOYMENT.md  Dockerfile.ros2-humble  Dockerfile.ros2-humble-gazebo  HUGGINGFACE_DEPLOYMENT_GUIDE.md  OLLAMA_SETUP.md  QUICK_REFERENCE.md  QUICK_START_OLLAMA.md  RAILWAY_DEPLOYMENT_GUIDE.md  README.chatbot.md  README.md  README_CI_CD.md  RENDER_DEPLOYMENT_GUIDE.md  VERCEL_DEPLOYMENT.md  check_qdrant.py  docker-compose.yml  docker-entrypoint.sh  docusaurus.config.js  index.html  install_ollama.ps1  load_to_cloud.py  package-lock.json  railway.toml  sidebars.js  sitemap.xml  start_chatbot_ollama.ps1  test-chatbot.ps1  test-chatbot.sh  test_chatbot_mock.py  vercel.json
.github/workflows/: act-test.yml  build-book.yml  ros2-ci.yml  (+2 more)
backend/: .env.example  DEPLOY.md  README.md  docker-compose.yml
chatbot/: index.html
docker/: docker-compose.yml
docs/: intro.md
examples/: test_examples.md
physical-ai-chatbot/: README.md  app.py  requirements.txt
ros2_workspace/: README.md  run_tests.sh  test_examples.py
ros2_workspace/src/module1_examples/tf2_example/: package.xml  setup.cfg  setup.py
ros2_workspace/src/module1_examples/tf2_example/launch/: tf2_example_launch.py
ros2_workspace/src/module1_examples/tf2_example/tf2_example/: broadcaster_node.py  listener_node.py
scripts/: init_database.py  init_qdrant.py  load_content.py  local_ci_test.sh  run_integration_tests.sh
(+189 files in other folders)
